May 3, 2019 - v.3.8.1
  -in nomenclature events PREVIOUS_SYMBOL and PREVIOUS_NAME are now always set
  
Feb 25, 2019 - v.3.8.0
  -updated to dbcp2

Feb 11, 2019 - v.3.7.9
  -moved BulkGeneMerger and NcbiGeneHistoryLoader into ncbi-gene-pipeline project

Jan 29, 2019 - v.3.7.8
  -added handling of PIG

Sep 28, 2018 - v.3.7.7
  -moved from subversion to github

Aug 8, 2018 - v.3.7.6
  -added GRCh38.p12 to list of primary reference assemblies for human
  -added removal of transcripts that becoame obsolete during assembly upgrade
   note: the obsolete transcripts are not dropped if on the new assembly there are no transcripts!

Jan 24, 2018 - v.3.7.5
-tuned up run_all.sh: no longer need to email list of secondary genes, because they are now handled
 weekly by code update in v.3.7.4

Dec 13, 2017 - v.3.7.4
-added handling of NCBI withdrawn/secondary genes based on gene_history.gz file from NCBI

Dec 12, 2017 - v.3.7.3
-moved code for generating annotations for chinchilla to TransitiveAnnotPipeline

Dec 11, 2017 - v.3.7.2
-fixed handling of gene associations for all species

Nov 16, 2017 - v.3.7.1
-fixed transcript pos update bug: new tr pos was added, but old pos was not deleted

Nov 10, 2017 - v.3.7.0
-Ensembl xdb ids are no longer loaded with version number;
 Ensembl ids for genes, proteins and transcripts, were loaded with version numbers,
   while the similar Ensembl ids loaded by UniProtKB pipeline were loaded without version numbers
   that causes some confusion when displaying Ensembl ids on gene report pages

Oct 4, 2017 - v.3.6.9
-fixed bug when an object had both to-insert and to-delete positions

Sep 22, 2017 - v.3.6.8
- transcript positions are now correctly loaded (previously they were set to gene positions)
- fixed bug when loading transcript features, when the previous features had different positions

Jul 27, 2017 - v.3.6.7
- fixed a bug introduced in version 3.6.6 for loading REFSEQ_STATUS and NCBI_ANNOT_STATUS

Jul 13, 2017 - v.3.6.6