@@ -1,3 +1,6 @@
+May 10, 2019 - v.3.8.2
+  -gene association loader: rewritten for simpler code and much better performance in highly parallel environment
+
 May 3, 2019 - v.3.8.1
   -in nomenclature events PREVIOUS_SYMBOL and PREVIOUS_NAME are now always set
   
